--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,7 +20,6 @@
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^8.5.1",
-    "nodemon": "^3.1.4",
     "rate-limiter": "^0.2.0",
     "swagger-ui-express": "^4.1.6",
     "xss-clean": "^0.1.1",
@@ -28,5 +27,8 @@
   },
   "engines": {
     "node": "20.x"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
